force-app/main/default/objects/Inspection__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <label>Findings</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>