force-app/main/default/objects/Inspection__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visual</fullName>
            </value>
            <value>
                <fullName>NDT</fullName>
            </value>
            <value>
                <fullName>Cathodic</fullName>
            </value>
            <value>
                <fullName>Hydrotest</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>