force-app/main/default/objects/Inspection__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <label>Inspector</label>
    <type>Text</type>
    <length>255</length>
</CustomField>