force-app/main/default/objects/Inspection__c/fields/Is_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurring__c</fullName>
    <label>Is Recurring</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>