force-app/main/default/objects/Inspection__c/fields/Parent_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Parent_Inspection__c</fullName>
    <label>Parent Inspection</label>
    <type>Lookup</type>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipName>Child_Inspections</relationshipName>
</CustomField>