force-app/main/default/objects/Inspection__c/fields/Recurring_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Interval_Days__c</fullName>
    <label>Recurring Interval Days</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>